src/style/index.css
.dn-editor {
    /*overflow-y: hidden;*/
}

.dn-editor .cm-scroller {
    /*overflow-y: hidden;*/
    padding: unset;
}

.dn-editor .workspace-leaf {
    all: unset;
}

.dn-editor .dn-content {
    display: none;
    /*margin: 0;*/
    /*border-radius: var(--he-popover-border-radius);*/
    /*overflow: hidden;*/
    /*height: 100%;*/
}

.dn-editor .workspace-leaf,
.dn-editor .workspace-split {
    height: 100%;
    width: 100%;
}

.dn-editor .markdown-source-view.mod-cm6 .cm-editor {
    min-height: auto;
}

.dn-editor .cm-content {
    padding-bottom: 0 !important;
    padding-top: 0 !important;
}

.dn-editor .view-content {
    background: none !important;
}

.dn-editor .cm-scroller {
    padding: 0 !important;
    overflow-y: clip;
}

.daily-note-view .daily-note-container::before {
    content: "";
    display: block;
    height: 1px;
    width: var(--file-line-width);
    margin-bottom: 30px;
    margin-left: auto;
    margin-right: auto;
    background-color: var(--color-base-25);
}

.daily-note-view .daily-note-container:first-child::before {
    height: 0px;
}

.is-popout-window .dn-editor .dn-content {
    margin: 0;
    border-radius: var(--he-popover-border-radius);
    overflow: hidden;
    height: auto;
}

.is-popout-window .dn-editor .workspace-leaf,
.is-popout-window .dn-editor .workspace-split {
    height: auto;
    width: 100%;
}

.is-popout-window .dn-editor .cm-scroller {
    height: auto;
}

.is-popout-window .dn-editor .markdown-source-view.mod-cm6 {
    height: auto;
}

.is-popout-window .dn-editor .view-content {
    height: auto;
}

.is-popout-window .dn-editor .workspace-leaf-content {
    height: auto;
}

.daily-note-view .embedded-backlinks {
    min-height: unset !important;
}

.daily-note-view {
    display: flex;
    flex-direction: column;
    gap: var(--size-4-4);
}

body.daily-notes-hide-frontmatter .daily-note-view .markdown-source-view.is-live-preview.show-properties .metadata-container {
    display: none;
}

body.daily-notes-hide-backlinks .daily-note-view .embedded-backlinks {
    display: none;
}

